@@ -3,64 +3,77 @@ package com.sprint.mission.discodeit.service.basic;
 import com.sprint.mission.discodeit.dto.request.MessageCreateRequest;
 import com.sprint.mission.discodeit.dto.request.MessageUpdateRequest;
 import com.sprint.mission.discodeit.dto.response.MessageResponse;
+import com.sprint.mission.discodeit.dto.response.PageResponse;
+import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.entity.User;
+import com.sprint.mission.discodeit.exception.channel.ChannelNotFoundException;
+import com.sprint.mission.discodeit.exception.message.MessageNotFoundException;
+import com.sprint.mission.discodeit.exception.user.UserNotFoundException;
+import com.sprint.mission.discodeit.mapper.MessageMapper;
+import com.sprint.mission.discodeit.mapper.PageResponseMapper;
+import com.sprint.mission.discodeit.repository.BinaryContentRepository;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
 import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.service.MessageService;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Slice;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional
+@Slf4j
 public class BasicMessageService implements MessageService {
+
+    private static final int MESSAGE_PAGE_SIZE = 50;
 
     private final MessageRepository messageRepository;
     private final ChannelRepository channelRepository;
     private final UserRepository userRepository;
+    private final BinaryContentRepository binaryContentRepository;
+    private final MessageMapper messageMapper;
+    private final PageResponseMapper pageResponseMapper;
 
     @Override
     public MessageResponse create(MessageCreateRequest dto) {
+        int attachmentCount = dto.binaryContentIds() == null ? 0 : dto.binaryContentIds().size();
+        log.debug("메시지 생성 시작: channelId={}, senderId={}, attachmentCount={}",
+                dto.channelId(), dto.senderId(), attachmentCount);
         Channel channel = channelRepository.findById(dto.channelId())
-                .orElseThrow(() -> new IllegalArgumentException("채널을 찾을 수 없습니다."));
+                .orElseThrow(() -> new ChannelNotFoundException(dto.channelId()));
         User author = userRepository.findById(dto.senderId())
-                .orElseThrow(() -> new IllegalArgumentException("작성자를 찾을 수 없습니다."));
+                .orElseThrow(() -> new UserNotFoundException(dto.senderId()));
+
         Message message = new Message(dto.content(), channel, author);
-        messageRepository.save(message);
-        return new MessageResponse(
-                message.getId(),
-                message.getChannel().getId(),
-                message.getAuthor().getId(),
-                message.getContent(),
-                Collections.emptyList(),
-                message.getCreatedAt(),
-                message.getUpdatedAt()
-        );
+
+        if (dto.binaryContentIds() != null && !dto.binaryContentIds().isEmpty()) {
+            List<BinaryContent> attachments = binaryContentRepository.findAllById(dto.binaryContentIds());
+            message.getAttachments().addAll(attachments);
+        }
+
+        Message savedMessage = messageRepository.save(message);
+        log.info("메시지 생성 완료: messageId={}, channelId={}",
+                savedMessage.getId(), dto.channelId());
+        return messageMapper.toDto(savedMessage);
     }
 
     @Override
     @Transactional(readOnly = true)
     public Optional<MessageResponse> findById(UUID id) {
         return messageRepository.findById(id)
-                .map(m -> new MessageResponse(
-                        m.getId(),
-                        m.getChannel().getId(),
-                        m.getAuthor().getId(),
-                        m.getContent(),
-                        Collections.emptyList(),
-                        m.getCreatedAt(),
-                        m.getUpdatedAt()
-                ));
+                .map(messageMapper::toDto);
     }
 
     @Override
@@ -73,38 +86,42 @@ public class BasicMessageService implements MessageService {
     @Transactional(readOnly = true)
     public List<MessageResponse> findAllByChannelId(UUID channelId) {
         return messageRepository.findAllByChannelId(channelId).stream()
-                .map(m -> new MessageResponse(
-                        m.getId(),
-                        m.getChannel().getId(),
-                        m.getAuthor().getId(),
-                        m.getContent(),
-                        Collections.emptyList(),
-                        m.getCreatedAt(),
-                        m.getUpdatedAt()
-                ))
-                .collect(Collectors.toList());
+                .map(messageMapper::toDto)
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public PageResponse<MessageResponse> findAllByChannelId(UUID channelId, int page) {
+        Pageable pageable = PageRequest.of(
+                page,
+                MESSAGE_PAGE_SIZE,
+                Sort.by(Sort.Direction.DESC, "createdAt")
+        );
+
+        Slice<MessageResponse> messages = messageRepository
+                .findAllByChannelId(channelId, pageable)
+                .map(messageMapper::toDto);
+
+        return pageResponseMapper.toDto(messages);
     }
 
     @Override
     public MessageResponse update(UUID id, MessageUpdateRequest dto) {
+        log.debug("메시지 수정 시작: messageId={}", id);
         Message message = messageRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("해당 메시지를 찾을 수 없습니다."));
+                .orElseThrow(() -> new MessageNotFoundException(id));
 
         message.updateContent(dto.content());
 
-        return new MessageResponse(
-                message.getId(),
-                message.getChannel().getId(),
-                message.getAuthor().getId(),
-                message.getContent(),
-                Collections.emptyList(),
-                message.getCreatedAt(),
-                message.getUpdatedAt()
-        );
+        log.info("메시지 수정 완료: messageId={}", id);
+        return messageMapper.toDto(message);
     }
 
     @Override
     public void delete(UUID id) {
+        log.debug("메시지 삭제 시작: messageId={}", id);
         messageRepository.deleteById(id);
+        log.info("메시지 삭제 완료: messageId={}", id);
     }
 }
